test: add test authorization and others ProductController