@@ -1,20 +1,27 @@
 package id.ac.ui.cs.advprog.jsoninventoryservice.controller;
 
-import com.fasterxml.jackson.databind.ObjectMapper;
 import id.ac.ui.cs.advprog.jsoninventoryservice.dto.request.ProductCreateRequest;
 import id.ac.ui.cs.advprog.jsoninventoryservice.dto.request.ProductUpdateRequest;
 import id.ac.ui.cs.advprog.jsoninventoryservice.dto.response.ProductResponse;
+import id.ac.ui.cs.advprog.jsoninventoryservice.exception.ActiveOrderException;
 import id.ac.ui.cs.advprog.jsoninventoryservice.security.JwtUtil;
 import id.ac.ui.cs.advprog.jsoninventoryservice.service.ProductService;
+import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.boot.test.autoconfigure.web.servlet.AutoConfigureMockMvc;
 import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
-import org.springframework.http.MediaType;
+import org.springframework.security.test.context.support.WithMockUser;
 import org.springframework.test.context.bean.override.mockito.MockitoBean;
+import org.springframework.data.domain.PageImpl;
+import org.springframework.http.MediaType;
+import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
+import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.test.web.servlet.MockMvc;
 
-import java.time.LocalDate;
+import java.util.Collections;
 import java.util.Optional;
 import java.util.UUID;
 
@@ -22,12 +29,11 @@ import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.when;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.*;
-import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.jsonPath;
-import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
+import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.*;
 
 @WebMvcTest(ProductController.class)
+@AutoConfigureMockMvc(addFilters = false)
 class ProductControllerTest {
-
     @Autowired
     private MockMvc mockMvc;
 
@@ -37,25 +43,28 @@ class ProductControllerTest {
     @MockitoBean
     private JwtUtil jwtUtil;
 
-    @Autowired
-    private ObjectMapper objectMapper;
-
     private UUID jastiperId;
     private UUID productId;
     private ProductResponse dummyResponse;
 
     @BeforeEach
     void setUp() {
+        SecurityContextHolder.getContext().setAuthentication(
+                new UsernamePasswordAuthenticationToken("jastiper", "password", Collections.singletonList(new SimpleGrantedAuthority("ROLE_JASTIPER")))
+        );
+
         jastiperId = UUID.randomUUID();
         productId = UUID.randomUUID();
-        dummyResponse = ProductResponse.builder()
-                .id(productId)
-                .jastiperId(jastiperId)
-                .name("Controller Test Product")
-                .price(20000L)
-                .stock(10)
-                .status("ACTIVE")
-                .build();
+
+        dummyResponse = new ProductResponse();
+        dummyResponse.setProductId(productId);
+        dummyResponse.setJastiper(ProductResponse.JastiperInfo.builder().userId(jastiperId).build());        dummyResponse.setName("Test Product");
+        dummyResponse.setPrice(100);
+    }
+
+    @AfterEach
+    void tearDown() {
+        SecurityContextHolder.clearContext();
     }
 
     @Test
@@ -65,48 +74,68 @@ class ProductControllerTest {
         mockMvc.perform(get("/products/" + productId))
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$.success").value(true))
-                .andExpect(jsonPath("$.data.name").value("Controller Test Product"));
+                .andExpect(jsonPath("$.data.name").value("Test Product"));
+    }
+
+    @Test
+    void testGetProductDetailPublic_NotFound() throws Exception {
+        when(productService.getProductById(productId)).thenReturn(Optional.empty());
+
+        mockMvc.perform(get("/products/" + productId))
+                .andExpect(status().isNotFound())
+                .andExpect(jsonPath("$.success").value(false));
     }
 
     @Test
     void testCreateProduct() throws Exception {
-        ProductCreateRequest request = new ProductCreateRequest();
-        request.setName("New");
-        request.setPrice(100L);
-        request.setStock(1);
-        request.setOriginCountry("UK");
-        request.setPurchaseDate(LocalDate.now());
+        when(productService.createProduct(any(), any(ProductCreateRequest.class))).thenReturn(dummyResponse);
 
-        when(productService.createProduct(eq(jastiperId), any(ProductCreateRequest.class))).thenReturn(dummyResponse);
+        String validPayload = "{"
+                + "\"name\":\"Test Product\","
+                + "\"description\":\"Valid Description\","
+                + "\"price\":100,"
+                + "\"stock\":10,"
+                + "\"origin_country\":\"Japan\","
+                + "\"purchase_date\":\"2026-01-01\""
+                + "}";
 
         mockMvc.perform(post("/products")
                         .requestAttr("jastiperId", jastiperId)
                         .contentType(MediaType.APPLICATION_JSON)
-                        .content(objectMapper.writeValueAsString(request)))
+                        .content(validPayload))
                 .andExpect(status().isCreated())
-                .andExpect(jsonPath("$.success").value(true))
-                .andExpect(jsonPath("$.data.id").value(productId.toString()));
+                .andExpect(jsonPath("$.success").value(true));
+    }
+
+    @Test
+    void testSearchProducts() throws Exception {
+        PageImpl<ProductResponse> page = new PageImpl<>(Collections.singletonList(dummyResponse));
+
+        when(productService.searchProductsPublic(
+                any(), any(), any(), any(), any(), any(), any(), any(), any()
+        )).thenReturn(page);
+
+        mockMvc.perform(get("/products"))
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("$.success").value(true));
     }
 
     @Test
     void testUpdateProduct_Success() throws Exception {
-        ProductUpdateRequest request = new ProductUpdateRequest();
-        request.setPrice(500L);
-
-        when(productService.updateProduct(eq(jastiperId), eq(productId), any(ProductUpdateRequest.class)))
+        when(productService.updateProduct(any(), eq(productId), any(ProductUpdateRequest.class)))
                 .thenReturn(Optional.of(dummyResponse));
 
         mockMvc.perform(patch("/products/" + productId)
                         .requestAttr("jastiperId", jastiperId)
                         .contentType(MediaType.APPLICATION_JSON)
-                        .content(objectMapper.writeValueAsString(request)))
+                        .content("{\"price\":150}"))
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$.success").value(true));
     }
 
     @Test
     void testDeleteProduct_Success() throws Exception {
-        when(productService.deleteProduct(jastiperId, productId)).thenReturn(true);
+        when(productService.deleteProduct(any(), eq(productId))).thenReturn(true);
 
         mockMvc.perform(delete("/products/" + productId)
                         .requestAttr("jastiperId", jastiperId))
@@ -115,73 +144,53 @@ class ProductControllerTest {
     }
 
     @Test
+    @WithMockUser(roles = "JASTIPER")
     void testDeleteProduct_NotFoundOrUnauthorized() throws Exception {
-        when(productService.deleteProduct(jastiperId, productId)).thenReturn(false);
+        when(productService.deleteProduct(any(), eq(productId)))
+                .thenThrow(new IllegalArgumentException("Product not found"));
 
         mockMvc.perform(delete("/products/" + productId)
                         .requestAttr("jastiperId", jastiperId))
-                .andExpect(status().isNotFound())
-                .andExpect(jsonPath("$.success").value(false));
-    }
-
-    @Test
-    void testGetProductDetailPublic_NotFound() throws Exception {
-        when(productService.getProductById(any())).thenReturn(Optional.empty());
-
-        mockMvc.perform(get("/products/" + UUID.randomUUID()))
-                .andExpect(status().isNotFound())
-                .andExpect(jsonPath("$.success").value(false))
-                .andExpect(jsonPath("$.message").value(org.hamcrest.Matchers.containsString("Product not found")));
+                .andExpect(status().isNotFound());
     }
 
     @Test
     void testUpdateProduct_Unauthorized() throws Exception {
-        ProductUpdateRequest request = new ProductUpdateRequest();
-        request.setName("New Name");
-
-        when(productService.updateProduct(eq(jastiperId), eq(productId), any()))
-                .thenReturn(Optional.empty());
+        when(productService.updateProduct(any(), eq(productId), any())).thenReturn(Optional.empty());
 
         mockMvc.perform(patch("/products/" + productId)
                         .requestAttr("jastiperId", jastiperId)
                         .contentType(MediaType.APPLICATION_JSON)
-                        .content(objectMapper.writeValueAsString(request)))
-                .andExpect(status().isNotFound());
+                        .content("{}"))
+                .andExpect(status().isNotFound())
+                .andExpect(jsonPath("$.success").value(false));
     }
+
     @Test
     void testGetMyCatalog() throws Exception {
-        when(productService.getMyCatalog(eq(jastiperId), any(), any(), any()))
-                .thenReturn(new org.springframework.data.domain.PageImpl<>(java.util.List.of(dummyResponse)));
+        PageImpl<ProductResponse> page = new PageImpl<>(Collections.singletonList(dummyResponse));
+        when(productService.getMyCatalog(any(), any(), any(), any())).thenReturn(page);
 
         mockMvc.perform(get("/products/my")
-                        .requestAttr("jastiperId", jastiperId)
-                        .param("search", "sepatu")
-                        .param("status", "ACTIVE")
-                        .param("page", "0")
-                        .param("size", "10"))
-                .andExpect(status().isOk());
+                        .requestAttr("jastiperId", jastiperId))
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("$.success").value(true));
     }
 
     @Test
     void testGetMyProductDetail_Success() throws Exception {
-        when(productService.getProductById(productId))
-                .thenReturn(java.util.Optional.of(dummyResponse));
+        when(productService.getProductById(productId)).thenReturn(Optional.of(dummyResponse));
 
         mockMvc.perform(get("/products/my/" + productId)
                         .requestAttr("jastiperId", jastiperId))
-                .andExpect(status().isOk());
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("$.success").value(true));
     }
 
     @Test
     void testGetMyProductDetail_UnauthorizedOrNotFound() throws Exception {
-        ProductResponse unauthorizedResponse = ProductResponse.builder()
-                .id(productId)
-                .jastiperId(UUID.randomUUID())
-                .name("Other Product")
-                .build();
-
-        when(productService.getProductById(productId))
-                .thenReturn(java.util.Optional.of(unauthorizedResponse));
+        ProductResponse wrongOwnerResponse = new ProductResponse();
+        when(productService.getProductById(productId)).thenReturn(Optional.of(wrongOwnerResponse));
 
         mockMvc.perform(get("/products/my/" + productId)
                         .requestAttr("jastiperId", jastiperId))
@@ -190,43 +199,108 @@ class ProductControllerTest {
     }
 
     @Test
-    void testSearchProducts() throws Exception {
-        when(productService.searchProductsPublic(any(), any(), any(), any(), any(), any()))                .thenReturn(new org.springframework.data.domain.PageImpl<>(java.util.List.of(dummyResponse)));
+    @WithMockUser(roles = "JASTIPER")
+    void deleteProduct_Conflict() throws Exception {
+        when(productService.deleteProduct(any(), eq(productId)))
+                .thenThrow(new ActiveOrderException(5));
+
+        mockMvc.perform(delete("/products/" + productId)
+                        .requestAttr("jastiperId", jastiperId))
+                .andExpect(status().isConflict());
+    }
+
+    @Test
+    @WithMockUser(roles = "JASTIPER")
+    void updateProduct_IllegalArgumentException_Branch() throws Exception {
+        when(productService.updateProduct(any(), eq(productId), any()))
+                .thenThrow(new IllegalArgumentException("Invalid status"));
+
+        mockMvc.perform(patch("/products/" + productId)
+                        .requestAttr("jastiperId", jastiperId)
+                        .contentType(MediaType.APPLICATION_JSON)
+                        .content("{}"))
+                .andExpect(status().isNotFound());
+    }
+
+    @Test
+    @WithMockUser(roles = "JASTIPER")
+    void testGetMyProductDetail_NullJastiperInfo() throws Exception {
+        ProductResponse noJastiperResponse = new ProductResponse();
+        noJastiperResponse.setProductId(productId);
+        noJastiperResponse.setJastiper(null);
+
+        when(productService.getProductById(productId)).thenReturn(Optional.of(noJastiperResponse));
+
+        mockMvc.perform(get("/products/my/" + productId)
+                        .requestAttr("jastiperId", jastiperId))
+                .andExpect(status().isNotFound());
+    }
+
+    @Test
+    @WithMockUser(roles = "JASTIPER")
+    void testGetMyProductDetail_NullJastiperObject() throws Exception {
+        ProductResponse responseWithNullJastiper = new ProductResponse();
+        responseWithNullJastiper.setProductId(productId);
+        responseWithNullJastiper.setJastiper(null);
+
+        when(productService.getProductById(productId)).thenReturn(Optional.of(responseWithNullJastiper));
+
+        mockMvc.perform(get("/products/my/" + productId)
+                        .requestAttr("jastiperId", jastiperId))
+                .andExpect(status().isNotFound());
+    }
+
+    @Test
+    @WithMockUser(roles = "JASTIPER")
+    void testGetMyProductDetail_WrongJastiperId_Branch() throws Exception {
+        ProductResponse wrongOwnerResponse = new ProductResponse();
+        wrongOwnerResponse.setProductId(productId);
+        wrongOwnerResponse.setJastiper(ProductResponse.JastiperInfo.builder().userId(UUID.randomUUID()).build());
+
+        when(productService.getProductById(productId)).thenReturn(Optional.of(wrongOwnerResponse));
+
+        mockMvc.perform(get("/products/my/" + productId)
+                        .requestAttr("jastiperId", jastiperId))
+                .andExpect(status().isNotFound());
+    }
+
+    @Test
+    void testSearchProducts_Success() throws Exception {
+        PageImpl<ProductResponse> page = new PageImpl<>(Collections.singletonList(dummyResponse));
+
+        when(productService.searchProductsPublic(any(), any(), any(), any(), any(), any(), any(), any(), any())).thenReturn(page);
 
         mockMvc.perform(get("/products")
-                        .param("q", "baju")
-                        .param("minPrice", "10000")
-                        .param("maxPrice", "50000")
-                        .param("page", "0")
-                        .param("size", "10"))
-                .andExpect(status().isOk());
+                        .param("page", "2")
+                        .param("limit", "10")
+                        .param("sort_by", "price")
+                        .param("order", "asc")
+                        .contentType(MediaType.APPLICATION_JSON))
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("$.success").value(true));
     }
 
     @Test
-    void deleteProduct_Conflict() throws Exception {
-        org.mockito.Mockito.when(productService.deleteProduct(org.mockito.ArgumentMatchers.any(), org.mockito.ArgumentMatchers.any()))
-                .thenThrow(new IllegalStateException("Cannot delete product with active orders"));
+    void testSearchProducts_SortByPurchaseDate_Ascending() throws Exception {
+        when(productService.searchProductsPublic(any(),any(),any(),any(),any(),any(),any(),any(),any()))
+                .thenReturn(new PageImpl<>(Collections.emptyList()));
 
-        mockMvc.perform(org.springframework.test.web.servlet.request.MockMvcRequestBuilders.delete("/products/{id}", java.util.UUID.randomUUID())
-                        .requestAttr("jastiperId", java.util.UUID.randomUUID()))
-                .andExpect(org.springframework.test.web.servlet.result.MockMvcResultMatchers.status().isConflict())
-                .andExpect(org.springframework.test.web.servlet.result.MockMvcResultMatchers.jsonPath("$.success").value(false));
+        mockMvc.perform(get("/products")
+                        .param("sort_by", "purchase_date")
+                        .param("order", "asc"))
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("$.success").value(true));
     }
 
     @Test
-    void updateProduct_IllegalArgumentException_Branch() throws Exception {
-        UUID id = UUID.randomUUID();
-        ProductUpdateRequest req = new ProductUpdateRequest();
+    void testSearchProducts_SortByRating_Ascending() throws Exception {
+        when(productService.searchProductsPublic(any(),any(),any(),any(),any(),any(),any(),any(),any()))
+                .thenReturn(new PageImpl<>(Collections.emptyList()));
 
-        when(productService.updateProduct(any(), eq(id), any()))
-                .thenThrow(new IllegalArgumentException("Status tidak valid"));
-
-        mockMvc.perform(org.springframework.test.web.servlet.request.MockMvcRequestBuilders.patch("/products/{id}", id)
-                        .requestAttr("jastiperId", UUID.randomUUID())
-                        .contentType(org.springframework.http.MediaType.APPLICATION_JSON)
-                        .content(objectMapper.writeValueAsString(req)))
-                .andExpect(org.springframework.test.web.servlet.result.MockMvcResultMatchers.status().isBadRequest())
-                .andExpect(org.springframework.test.web.servlet.result.MockMvcResultMatchers.jsonPath("$.success").value(false))
-                .andExpect(org.springframework.test.web.servlet.result.MockMvcResultMatchers.jsonPath("$.message").value("Status tidak valid"));
+        mockMvc.perform(get("/products")
+                        .param("sort_by", "rating")
+                        .param("order", "asc"))
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("$.success").value(true));
     }
 }
